--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -93,7 +93,7 @@ pa-mk4-grid-size-w=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Power Armours 
 
 # Power Armour mk3
 cas-pamk3-lvest-inv-size=[item=pamk3-lvest][color=#101798]MK3's Light Utility Vest Inv-B Size[/color]
-cas-pamk3-hvest-inv-size=[item=pamk3-hvest][color=#101798]MK3's Hevay Utility Vest Inv-B Size[/color]
+cas-pamk3-hvest-inv-size=[item=pamk3-hvest][color=#101798]MK3's Heavy Utility Vest Inv-B Size[/color]
 cas-pamk3-pamk3-inv-size=[item=pamk3-pamk3][color=#101798]MK3's Power Armour MK3 Inv-B Size[/color]
 cas-pamk3-pamk4-inv-size=[item=pamk3-pamk4][color=#101798]MK3's Power Armour MK4 Inv-B Size[/color]
 
@@ -340,7 +340,7 @@ m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBas
 m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-hard_science_required=Adding space science packs to be required in reserching techs at MK6 --> MK10 & 1, MK5
+hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo. This setting is usless if u use my mod with SE (Space Exploration).
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:1500\nBase Default:60
