--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -332,7 +332,7 @@ m-cas-8-a_mk8-inv-size=P.A.R's Elektrisk Rustning MK8 Inv Størrelse\nMin:0\nMak
 m-cas-9-a_mk9-inv-size=P.A.R's Elektrisk Rustning MK9 Inv Størrelse\nMin:0\nMaks:4500\nBase Default:450
 m-cas-10-a_mk10-inv-size=P.A.R's Elektrisk Rustning MK10 Inv Størrelse\nMin:0\nMaks:5000\nBase Default:500
 
-hard_science_required=legger til ekstra Verdensrom Forsknings Pakker til teknologier. For å gjøre det vanskeligere.
+hard_science_required=Legger til ekstra verdensrom forsknings pakker til MK6 til MK10 og Exoskjelett MK5. For å gjøre det vanskeligere.\n Denne fynksjonen er ubrukelig hvis to spiller med SE mod. \n Intill jeg finner enn fiks.
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3\nMin:0\nMaks:1500\nSpillets Normal:60
