--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -340,7 +340,7 @@ m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBas
 m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo. This setting is usless if u use my mod with SE (Space Exploration).
+hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has noe effect if u use my mod with SE (Space Exploration).
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:1500\nBase Default:60
