CAS Update Nullius

--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -81,6 +81,32 @@ mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Power Armour MK4
 cas-k2-power-armor-mk3-inv-size=[item=power-armor-mk3][color=#9000d3]K2's Power Armour Mk3 Inv-B Size[/color]
 cas-k2-power-armor-mk4-inv-size=[item=power-armor-mk4][color=#9000d3]K2's Power Armour Mk4 Inv-B Size[/color]
 
+# Nullius
+nullius-1-grid-size-h=[item=nullius-chassis-1][color=#e00700]Nullius's Armor Chassis 1 Hight[/color]
+nullius-1-grid-size-w=[item=nullius-chassis-1][color=#e00700]Nullius's Armor Chassis 1 Width[/color]
+
+nullius-2-grid-size-h=[item=nullius-chassis-2][color=#e00700]Nullius's Armor Chassis 2 Hight[/color]
+nullius-2-grid-size-w=[item=nullius-chassis-2][color=#e00700]Nullius's Armor Chassis 2 Width[/color]
+
+nullius-3-grid-size-h=[item=nullius-chassis-3][color=#e00700]Nullius's Armor Chassis 3 Hight[/color]
+nullius-3-grid-size-w=[item=nullius-chassis-3][color=#e00700]Nullius's Armor Chassis 3 Width[/color]
+
+nullius-4-grid-size-h=[item=nullius-chassis-4][color=#e00700]Nullius's Armor Chassis 4 Hight[/color]
+nullius-4-grid-size-w=[item=nullius-chassis-4][color=#e00700]Nullius's Armor Chassis 4 Width[/color]
+
+nullius-5-grid-size-h=[item=nullius-chassis-5][color=#e00700]Nullius's Armor Chassis 5 Hight[/color]
+nullius-5-grid-size-w=[item=nullius-chassis-5][color=#e00700]Nullius's Armor Chassis 5 Width[/color]
+
+nullius-6-grid-size-h=[item=nullius-chassis-6][color=#e00700]Nullius's Armor Chassis 6 Hight[/color]
+nullius-6-grid-size-w=[item=nullius-chassis-6][color=#e00700]Nullius's Armor Chassis 6 Width[/color]
+
+n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#e00700]Nullius's Armor Chassis 1 Inv-B[/color]
+n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#e00700]Nullius's Armor Chassis 2 Inv-B[/color]
+n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#e00700]Nullius's Armor Chassis 3 Inv-B[/color]
+n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#e00700]Nullius's Armor Chassis 4 Inv-B[/color]
+n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#e00700]Nullius's Armor Chassis 5 Inv-B[/color]
+n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#e00700]Nullius's Armor Chassis 6 Inv-B[/color]
+
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=[item=PaA-power-armor-mk3][color=#89CE94]P&A's Power Armour MK3 Inv-B Size[/color]
 cas-PaA-power-armor-mk4-inv-size=[item=PaA-power-armor-mk4][color=#89CE94]P&A's Power Armour MK4 Inv-B Size[/color]
@@ -176,7 +202,7 @@ se-thruster-suit-4-grid-size-w=[item=se-thruster-suit-4][color=pink]SE's Space S
 # Explaining the (Base & Mod Defaults): 
 # Mod Defaults is what my mod set the sizes to.
 # Base Defaults is what the game/mod u installed before i did my changes has set the size to.
-# Also to keep the translation clean keep the Hight first and Witdh under, Should u do a pull request.
+# Also to keep the translation clean keep the Hight first and Width under, Should u do a pull request.
 
 # Vanilla Armour's
 
@@ -227,17 +253,20 @@ custom-power-armor-mk4-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax
 custom-power-armor-mk5-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:500\nBase Default:16\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:500\nBase Default:16\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-# Power Armour mk3 
-cas-pamk3-lvest-inv-size=MK3's Light Utility Vest\nMin:0\nMax:500\nBase Default:10
-cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest\nMin:0\nMax:600\nBase Default:20
-cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3\nMin:0\nMax:800\nBase Default:50
-cas-pamk3-pamk4-inv-size=MK3's Power Armour Mk4\nMin:0\nMax:900\nBase Default:60
+# Factorio Extended Equipment
+cas-extended-power-armor-1-inv-size=FE Power Armour 1\nMin:0\nMax:600\nBase Default:50
+cas-extended-power-armor-2-inv-size=FE Power Armour 2\nMin:0\nMax:700\nBase Default:80
+cas-extended-power-armor-3-inv-size=FE Power Armour 3\nMin:0\nMax:800\nBase Default:100
 
-pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk1-grid-size-h="FE's" Power Armour MK1 Height\nMin:0\nMax:50\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk1-grid-size-w="FE's" Power Armour MK1 Width\nMin:0\nMax:50\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk2-grid-size-h="FE's" Power Armour MK2 Height\nMin:0\nMax:60\nBase Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk2-grid-size-w="FE's" Power Armour MK2 Width\nMin:0\nMax:60\nBase Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
 
 # IndustrialRevolution3
 ir3-light-cas-grid-size-h=IR3 Light Armour Height\nMin:0\nMax:10\nBase Default:4\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -274,19 +303,31 @@ mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nBase Default
 mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:400\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-# Factorio Extended Equipment
-cas-extended-power-armor-1-inv-size=FE Power Armour 1\nMin:0\nMax:600\nBase Default:50
-cas-extended-power-armor-2-inv-size=FE Power Armour 2\nMin:0\nMax:700\nBase Default:80
-cas-extended-power-armor-3-inv-size=FE Power Armour 3\nMin:0\nMax:800\nBase Default:100
+# Nullius
+nullius-1-grid-size-h=Nullius's Armor Chassis 1 Høyde\nMin:0\nMax:30\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-1-grid-size-w=Nullius's Armor Chassis 1 Bredde\nMin:0\nMax:30\nBase Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-extended-armor-mk1-grid-size-h="FE's" Power Armour MK1 Height\nMin:0\nMax:50\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-extended-armor-mk1-grid-size-w="FE's" Power Armour MK1 Width\nMin:0\nMax:50\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+nullius-2-grid-size-h=Nullius's Armor Chassis 2 Høyde\nMin:0\nMax:40\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-2-grid-size-w=Nullius's Armor Chassis 2 Bredde\nMin:0\nMax:40\nBase Default:6\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-extended-armor-mk2-grid-size-h="FE's" Power Armour MK2 Height\nMin:0\nMax:60\nBase Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-extended-armor-mk2-grid-size-w="FE's" Power Armour MK2 Width\nMin:0\nMax:60\nBase Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+nullius-3-grid-size-h=Nullius's Armor Chassis 3 Høyde\nMin:0\nMax:50\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-3-grid-size-w=Nullius's Armor Chassis 3 Bredde\nMin:0\nMax:50\nBase Default:8\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 
-extended-armor-mk3-grid-size-h="FE's" Power Armour MK3 Height\nMin:0\nMax:70\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-extended-armor-mk3-grid-size-w="FE's" Power Armour MK3 Width\nMin:0\nMax:70\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+nullius-4-grid-size-h=Nullius's Armor Chassis 4 Høyde\nMin:0\nMax:60\nBase Default:12\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-4-grid-size-w=Nullius's Armor Chassis 4 Bredde\nMin:0\nMax:60\nBase Default:9\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+
+nullius-5-grid-size-h=Nullius's Armor Chassis 5 Høyde\nMin:0\nMax:70\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-5-grid-size-w=Nullius's Armor Chassis 5 Bredde\nMin:0\nMax:70\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+
+nullius-6-grid-size-h=Nullius's Armor Chassis 6 Høyde\nMin:0\nMax:80\nBase Default:18\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+nullius-6-grid-size-w=Nullius's Armor Chassis 6 Bredde\nMin:0\nMax:80\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+
+n-cas-nullius-chassis-1-inv-size=Nullius's Armor Chassis 1 \nMin:0\nMax:100\nBase Default:0
+n-cas-nullius-chassis-2-inv-size=Nullius's Armor Chassis 2 \nMin:0\nMax:200\nBase Default:10
+n-cas-nullius-chassis-3-inv-size=Nullius's Armor Chassis 3 \nMin:0\nMax:300\nBase Default:20
+n-cas-nullius-chassis-4-inv-size=Nullius's Armor Chassis 4 \nMin:0\nMax:400\nBase Default:30
+n-cas-nullius-chassis-5-inv-size=Nullius's Armor Chassis 5 \nMin:0\nMax:500\nBase Default:40
+n-cas-nullius-chassis-6-inv-size=Nullius's Armor Chassis 6 \nMin:0\nMax:600\nBase Default:50
 
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=P&A Power Armour MK3\nMin:0\nMax:800\nBase Default:60
@@ -297,6 +338,18 @@ pa-mk3-grid-size-w="P&A's" Power Armours Mk3 Width\nMin:0\nMax:40\nBase Default:
 
 pa-mk4-grid-size-h="P&A's" Power Armours Mk4 Height\nMin:0\nMax:50\nBase Default:24\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pa-mk4-grid-size-w="P&A's" Power Armours Mk4 Width\nMin:0\nMax:50\nBase Default:24\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+# Power Armour MK3
+cas-pamk3-lvest-inv-size=MK3's Light Utility Vest\nMin:0\nMax:500\nBase Default:10
+cas-pamk3-hvest-inv-size=MK3's Hevay Utility Vest\nMin:0\nMax:600\nBase Default:20
+cas-pamk3-pamk3-inv-size=MK3's Power Armour MK3\nMin:0\nMax:800\nBase Default:50
+cas-pamk3-pamk4-inv-size=MK3's Power Armour Mk4\nMin:0\nMax:900\nBase Default:60
+
+pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Default:14\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Power Armour & Replacer
 par-1-grid-size-h=P.A.R's Power Armours Mk1 Height\nMin:0\nMax:100\nBase Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -341,6 +394,7 @@ m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBas
 m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 hard_science_required=Adding space science packs to be required in reserching MK6 --> MK10 & MK5 Exo.\nThis setting has noe effect if u use my mod with SE (Space Exploration).
+
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:1500\nBase Default:60
