--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -62,11 +62,37 @@ mk3-armor-grid-size-w=[item=power-armor-mk3][color=#9000d3]K2's Elektrisk Rustni
 mk4-armor-grid-size-h=[item=power-armor-mk4][color=#9000d3]K2's Elektrisk Rustning MK4 Høyde[/color]
 mk4-armor-grid-size-w=[item=power-armor-mk4][color=#9000d3]K2's Elektrisk Rustning MK4 Bredde[/color]
 
+# Nullius
+nullius-1-grid-size-h=[item=nullius-chassis-1][color=#e00700]Nullius's Rustnings Ramme 1 Høyde[/color]
+nullius-1-grid-size-w=[item=nullius-chassis-1][color=#e00700]Nullius's Rustnings Ramme 1 Bredde[/color]
+
+nullius-2-grid-size-h=[item=nullius-chassis-2][color=#e00700]Nullius's Rustnings Ramme 2 Høyde[/color]
+nullius-2-grid-size-w=[item=nullius-chassis-2][color=#e00700]Nullius's Rustnings Ramme 2 Bredde[/color]
+
+nullius-3-grid-size-h=[item=nullius-chassis-3][color=#e00700]Nullius's Rustnings Ramme 3 Høyde[/color]
+nullius-3-grid-size-w=[item=nullius-chassis-3][color=#e00700]Nullius's Rustnings Ramme 3 Bredde[/color]
+
+nullius-4-grid-size-h=[item=nullius-chassis-4][color=#e00700]Nullius's Rustnings Ramme 4 Høyde[/color]
+nullius-4-grid-size-w=[item=nullius-chassis-4][color=#e00700]Nullius's Rustnings Ramme 4 Bredde[/color]
+
+nullius-5-grid-size-h=[item=nullius-chassis-5][color=#e00700]Nullius's Rustnings Ramme 5 Høyde[/color]
+nullius-5-grid-size-w=[item=nullius-chassis-5][color=#e00700]Nullius's Rustnings Ramme 5 Bredde[/color]
+
+nullius-6-grid-size-h=[item=nullius-chassis-6][color=#e00700]Nullius's Rustnings Ramme 6 Høyde 6[/color]
+nullius-6-grid-size-w=[item=nullius-chassis-6][color=#e00700]Nullius's Rustnings Ramme 6 Bredde 6[/color]
+
+n-cas-nullius-chassis-1-inv-size=[item=nullius-chassis-1][color=#e00700]Nullius's Rustnings Ramme 1 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-2-inv-size=[item=nullius-chassis-2][color=#e00700]Nullius's Rustnings Ramme 2 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-3-inv-size=[item=nullius-chassis-3][color=#e00700]Nullius's Rustnings Ramme 3 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-4-inv-size=[item=nullius-chassis-4][color=#e00700]Nullius's Rustnings Ramme 4 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-5-inv-size=[item=nullius-chassis-5][color=#e00700]Nullius's Rustnings Ramme 5 Inv Størrelse-B[/color]
+n-cas-nullius-chassis-6-inv-size=[item=nullius-chassis-6][color=#e00700]Nullius's Rustnings Ramme 6 Inv Størrelse-B[/color]
+
 # Space Exploration
 cas-se-thruster-suit-inv-size=[item=se-thruster-suit][color=pink]SE Romdrakt 1 Inv[/color]
-cas-se-thruster-suit-2-inv-size=[item=se-thruster-suit-2][color=pink]SE Romdrakt 2 Inv Størrelse[/color]
-cas-se-thruster-suit-3-inv-size=[item=se-thruster-suit-3][color=pink]SE Romdrakt 3 Inv Størrelse[/color]
-cas-se-thruster-suit-4-inv-size=[item=se-thruster-suit-4][color=pink]SE Romdrakt 4 Inv Størrelse[/color]
+cas-se-thruster-suit-2-inv-size=[item=se-thruster-suit-2][color=pink]SE Romdrakt 2 Inv Størrelse-B[/color]
+cas-se-thruster-suit-3-inv-size=[item=se-thruster-suit-3][color=pink]SE Romdrakt 3 Inv Størrelse-B[/color]
+cas-se-thruster-suit-4-inv-size=[item=se-thruster-suit-4][color=pink]SE Romdrakt 4 Inv Størrelse-B[/color]
 
 se-thruster-suit-grid-size-h=[item=se-thruster-suit][color=pink]SE's Romdrakt 1 Høyde[/color]
 se-thruster-suit-grid-size-w=[item=se-thruster-suit][color=pink]SE's Romdrakt 1 Bredde[/color]
@@ -205,53 +231,6 @@ custom-power-armor-mk4-grid-size-w=Custom's Elektrisk Rustning MK4 Bredde\nMin:0
 custom-power-armor-mk5-grid-size-h=Custom's Elektrisk Rustning MK5 Høyde\nMin:0\nMaks:500\nSpillets Normal:16\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 custom-power-armor-mk5-grid-size-w=Custom's Elektrisk Rustning MK5 Bredde\nMin:0\nMaks:500\nSpillets Normal:16\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-# IndustrialRevolution3
-ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:4\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
-
-ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
-
-# Power Armour mk3 
-cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:150\nSpillets Normal:10
-cas-pamk3-hvest-inv-size=MK3's Tung Bruksvest\nMin:0\nMaks:200\nSpillets Normal:20
-cas-pamk3-pamk3-inv-size=MK3's Elektrisk Rustning MK3\nMin:0\nMaks:1000\nSpillets Normal:50
-cas-pamk3-pamk4-inv-size=MK3's Elektrisk Rustning Mk4\nMin:0\nMaks:1500\nSpillets Normal:60
-
-pamk3-pmak3-grid-size-h=MK3's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-pamk3-pmak3-grid-size-w=MK3's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:30\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-pamk3-pmak4-grid-size-h=MK3's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Normal:20\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-pamk3-pmak4-grid-size-w=MK3's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Normal:20\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-# Space Exploration
-cas-se-thruster-suit-inv-size=SE RomDrakt 1\nMin:0\nMaks:500\nSpillets Normal:20
-cas-se-thruster-suit-2-inv-size=SE RomDrakt 2\nMin:0\nMaks:1000\nSpillets Normal:40
-cas-se-thruster-suit-3-inv-size=SE RomDrakt 3\nMin:0\nMaks:1500\\nSpillets Normal:50
-cas-se-thruster-suit-4-inv-size=SE RomDrakt 4\nMin:0\nMaks:2000\nSpillets Normal:60
-
-se-thruster-suit-grid-size-h=SE's RomDrakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-grid-size-w=SE's RomDrakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-se-thruster-suit-2grid-size-h=SE's RomDrakt 2 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-2grid-size-w=SE's RomDrakt 2 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
- 
-se-thruster-suit-3-grid-size-h=SE's RomDrakt 3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-3-grid-size-w=SE's RomDrakt 3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-se-thruster-suit-4-grid-size-h=SE's RomDrakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-se-thruster-suit-4-grid-size-w=SE's RomDrakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-# Krastorio 2
-cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:1500\nSpillets Normal:40
-cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:2000\nSpillets Normal:50
-
-mk3-armor-grid-size-h=K2's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-mk3-armor-grid-size-w=K2's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-mk4-armor-grid-size-h=K2's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-mk4-armor-grid-size-w=K2's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
 # Factorio Extended Equipment
 cas-extended-power-armor-1-inv-size=FE Elektrisk Rustning 1\nMin:0\nMaks:500\nSpillets Normal:50
 cas-extended-power-armor-2-inv-size=FE Elektrisk Rustning 2\nMin:0\nMaks:1000\nSpillets Normal:80
@@ -265,6 +244,63 @@ extended-armour-mk2-grid-size-w=FE's Elektrisk Rustning MK2 Bredde\nMin:0\nMaks:
 
 extended-armour-mk3-grid-size-h=FE's Elektrisk Rustning MK3 Høyde\nMin:0\nMaks:70\nSpillets Normal:18\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 extended-armour-mk3-grid-size-w=FE's Elektrisk Rustning MK3 Bredde\nMin:0\nMaks:70\nSpillets Normal:18\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+
+# IndustrialRevolution3
+ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:4\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+
+ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+
+# Krastorio 2
+cas-k2-power-armor-mk3-inv-size=K2 Elektrisk Rustning Mk3\nMin:0\nMaks:1500\nSpillets Normal:40
+cas-k2-power-armor-mk4-inv-size=K2 Elektrisk Rustning Mk4\nMin:0\nMaks:2000\nSpillets Normal:50
+
+mk3-armor-grid-size-h=K2's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+mk3-armor-grid-size-w=K2's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+mk4-armor-grid-size-h=K2's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+mk4-armor-grid-size-w=K2's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+# Nullius
+nullius-1-grid-size-h=Nullius's Rustnings Ramme 1 Høyde\nMin:0\nMaks:30\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+nullius-1-grid-size-w=Nullius's Rustnings Ramme 1 Bredde\nMin:0\nMaks:30\nSpillets Normal:5\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+nullius-2-grid-size-h=Nullius's Rustnings Ramme 2 Høyde\nMin:0\nMaks:40\nSpillets Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+nullius-2-grid-size-w=Nullius's Rustnings Ramme 2 Bredde\nMin:0\nMaks:40\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+nullius-3-grid-size-h=Nullius's Rustnings Ramme 3 Høyde\nMin:0\nMaks:50\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+nullius-3-grid-size-w=Nullius's Rustnings Ramme 3 Bredde\nMin:0\nMaks:50\nSpillets Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+nullius-4-grid-size-h=Nullius's Rustnings Ramme 4 Høyde\nMin:0\nMaks:60\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+nullius-4-grid-size-w=Nullius's Rustnings Ramme 4 Bredde\nMin:0\nMaks:60\nSpillets Normal:9\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+nullius-5-grid-size-h=Nullius's Rustnings Ramme 5 Høyde\nMin:0\nMaks:70\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+nullius-5-grid-size-w=Nullius's Rustnings Ramme 5 Bredde\nMin:0\nMaks:70\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+nullius-6-grid-size-h=Nullius's Rustnings Ramme 6 Høyde\nMin:0\nMaks:80\nSpillets Normal:18\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+nullius-6-grid-size-w=Nullius's Rustnings Ramme 6 Bredde\nMin:0\nMaks:80\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+n-cas-nullius-chassis-1-inv-size=Nullius's Rustnings Ramme 1 \nMin:0\nMaks:100\nSpillets Normal:0
+n-cas-nullius-chassis-2-inv-size=Nullius's Rustnings Ramme 2 \nMin:0\nMaks:200\nSpillets Normal:10
+n-cas-nullius-chassis-3-inv-size=Nullius's Rustnings Ramme 3 \nMin:0\nMaks:300\nSpillets Normal:20
+n-cas-nullius-chassis-4-inv-size=Nullius's Rustnings Ramme 4 \nMin:0\nMaks:400\nSpillets Normal:30
+n-cas-nullius-chassis-5-inv-size=Nullius's Rustnings Ramme 5 \nMin:0\nMaks:500\nSpillets Normal:40
+n-cas-nullius-chassis-6-inv-size=Nullius's Rustnings Ramme 6 \nMin:0\nMaks:600\nSpillets Normal:50
+
+
+# Power Armour mk3 
+cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:150\nSpillets Normal:10
+cas-pamk3-hvest-inv-size=MK3's Tung Bruksvest\nMin:0\nMaks:200\nSpillets Normal:20
+cas-pamk3-pamk3-inv-size=MK3's Elektrisk Rustning MK3\nMin:0\nMaks:1000\nSpillets Normal:50
+cas-pamk3-pamk4-inv-size=MK3's Elektrisk Rustning Mk4\nMin:0\nMaks:1500\nSpillets Normal:60
+
+pamk3-pmak3-grid-size-h=MK3's Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+pamk3-pmak3-grid-size-w=MK3's Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:30\nSpillets Normal:14\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+pamk3-pmak4-grid-size-h=MK3's Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Normal:20\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+pamk3-pmak4-grid-size-w=MK3's Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Normal:20\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # Power And Armour
 cas-PaA-power-armor-mk3-inv-size=P&A Elektrisk Rustning MK3\nMin:0\nMaks:1500\nSpillets Normal:60
@@ -325,3 +361,21 @@ cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Elektrisk Rustning MK3
 
 power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Elektrisk Rustning Mk3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+# Space Exploration
+cas-se-thruster-suit-inv-size=SE RomDrakt 1\nMin:0\nMaks:500\nSpillets Normal:20
+cas-se-thruster-suit-2-inv-size=SE RomDrakt 2\nMin:0\nMaks:1000\nSpillets Normal:40
+cas-se-thruster-suit-3-inv-size=SE RomDrakt 3\nMin:0\nMaks:1500\\nSpillets Normal:50
+cas-se-thruster-suit-4-inv-size=SE RomDrakt 4\nMin:0\nMaks:2000\nSpillets Normal:60
+
+se-thruster-suit-grid-size-h=SE's RomDrakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-grid-size-w=SE's RomDrakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Normal:6\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+se-thruster-suit-2grid-size-h=SE's RomDrakt 2 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-2grid-size-w=SE's RomDrakt 2 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ 
+se-thruster-suit-3-grid-size-h=SE's RomDrakt 3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-3-grid-size-w=SE's RomDrakt 3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+
+se-thruster-suit-4-grid-size-h=SE's RomDrakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-4-grid-size-w=SE's RomDrakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Normal:12\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
